# CS5330-Pattern-Recognition-Computer-vision-

./: .gitignore
Projects/final_project/: .gitignore  README.md  main.py  verify_pipeline.py
Projects/final_project/presentation/: generate_assets.py  make_pptx.py  presentation.html  presentation.md  presentation.pptx  presentation.tex
Projects/final_project/report/: references.bib  report.tex  results_summary.tex
Projects/final_project/results/: history_pretrained-frozen_seed100.json  history_pretrained-frozen_seed2026.json  history_pretrained-frozen_seed42.json  history_random-frozen_seed100.json  history_random-frozen_seed2026.json  history_random-frozen_seed42.json  history_random-full_seed100.json  history_random-full_seed2026.json  history_random-full_seed42.json  summary_metrics.json  test_evaluation_metrics.json
Projects/final_project/src/: __init__.py  dataset.py  evaluate.py  generate_latex_results.py  model.py  run_experiments.py  train.py  visualize.py
Projects/project1/: .gitignore  CMakeLists.txt  README.md  filter.cpp  filter.h  imgDisplay.cpp  notes  report.tex  vidDisplay.cpp  vidDisplayGray.cpp
Projects/project1/da2-code/: CMakeLists.txt  DA2Network.hpp  README.md
Projects/project1/onnxruntime-linux-x64-1.26.0/: SETUP.md
Projects/project2/: CMakeLists.txt  Featurizer.h  FeaturizerImpl.h  README.md  SimilarityScoring.h  SimilarityScoringImpl.h  gui.py  main.cpp  report.tex  run.sh  show_matches.py
Projects/project2/featurizer/: Featurizer.h  FeaturizerImpl.h
Projects/project2/models/: ImageMatch.h  NamedImage.h
Projects/project2/similarity_scoring/: SimilarityScoringImpl.h
Projects/project3/: .gitignore  CMakeLists.txt  README.md  cleanup.cpp  cleanup.h  embedding.py  evaluate.cpp  features.cpp  features.h  main.cpp  my-notes.md  report.tex  segment.cpp  segment.h  threshold.cpp  threshold.h  train.cpp  utilities.cpp  visualize_pipeline.cpp
Projects/project4/: .gitignore  CMakeLists.txt  README.md  ar_system.cpp  calibrate.cpp  generate_checkerboard.py  generate_mock_images.py  report.tex  robust_features.cpp
Projects/project5/: README.md  draw_network.py  examine_network.py  greek_recognition.py  hyperparameter_sweep_results.csv  mnist_hyperparameter_sweep.py  mnist_recognition.py  mnist_transformer.py  report.tex  test_handwritten.py  test_recognition.py
Projects/project5/models/: greek_model.pth  mnist_model.pth  transformer_model.pth
